fixing horizontal scroll behaviour

--- a/src/sass/imports/portfolio.scss
+++ b/src/sass/imports/portfolio.scss
@@ -1,6 +1,10 @@
 #portfolio {
     width:100%;
     height:100vh;
+    display: flex;
+    flex-direction: column;
+    
+    justify-content: center;
     
 
     header {
@@ -12,18 +16,33 @@
         }
     }
     main {
-        padding: 50px;
+        padding: 50px 0px;
         white-space: nowrap;
-
-
+        //min-height: 50vh;
+        
+        //Horizontal scrollbar
+        #mCSB_1_scrollbar_horizontal {
+            max-width: 600px;
+            margin: auto; 
+            position: absolute;
+            bottom:0;
+        }
         .post-teaser {
             position: relative;
-            width:350px;
-            height:500px;
+            min-width: 350px;
+            width:calc(100vw/5);
+            min-height: 500px;
+            height:calc(100vw/4);
             background-size: cover;
             border-radius: 15px;
             display: inline-block;
             margin-right: 40px;
+            &:first-child {
+                margin-left: 50px;
+            }
+            &:last-child {
+                margin-right: 50px;
+            }
             
             &::after {
                 content: '';
