--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,6 @@
 @import 'imports/portfolio.scss';
 body {
     font-family: 'Nexa', 'open sans', Arial, Helvetica, sans-serif;
-    height:2000px; 
+    //height:2000px; 
     overflow-x: hidden;
   } 
